fix the alignment of destination image title

--- a/styles/style.css
+++ b/styles/style.css
@@ -274,6 +274,20 @@ main {
         'bangladesh bangladesh bangladesh bangladesh bangladesh bandarban bandarban bandarban bandarban bandarban bandarban bandarban';
 }
 
+.destination-img-container>div {
+    position: relative;
+}
+
+.destination-img-title {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    color: #FFF;
+    font-size: 28px;
+    font-weight: 800;
+    transform: translateX(-50%)
+}
+
 .destination-img-container>div>img {
     width: 100%;
     height: 100%;
